--- a/index.html
+++ b/index.html
@@ -81,28 +81,28 @@
     <section class="container-fluid">
       <div class="row w-75 mx-auto my-5 servicio-fila">
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-          <img src="/Fotos/foto-4.jpg" alt="desarollo" width="180" height="160">
+          <img src="Fotos/foto-4.jpg" alt="desarollo" width="180" height="160">
           <div>
             <h3 class="fs-5 mt-4 px-4 pb-1">Desarrollo</h3>
             <p class="px-4">Desarrollo de aplicaciones WEB, moviles y ecommerce.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-          <img src="/Fotos/foto-5.png" alt="desarollo" width="180" height="160">
+          <img src="Fotos/foto-5.png" alt="desarollo" width="180" height="160">
           <div>
             <h3 class="fs-5 mt-4 px-4 pb-1">Branding</h3>
             <p class="px-4">DIseño, conceptualizacion e implementacion de productos digitales.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-          <img src="/Fotos/foto-6.png" alt="desarollo" width="180" height="160">
+          <img src="Fotos/foto-6.png" alt="desarollo" width="180" height="160">
           <div>
             <h3 class="fs-5 mt-4 px-4 pb-1">Comunicaciones</h3>
             <p class="px-4">Desarrollo del plan de comunicaciones para sus clientes.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 d-flex my-5 icono-wrap">
-          <img src="/Fotos/foto-7.png" alt="desarollo" width="180" height="160">
+          <img src="Fotos/foto-7.png" alt="desarollo" width="180" height="160">
           <div>
             <h3 class="fs-5 mt-4 px-4 pb-1">SEO</h3>
             <p class="px-4">Analizamos la eficiencia y optimizamos los sitios WEB.</p>
@@ -117,7 +117,7 @@
         <p class="fs-4">Siempre buscamos las personas adecuadas para que trabajen con nosotros. Si te sientes listo para este reto, te esoeramos para que te unas a nosotros.</p>
       </div>
       <div class="mt-5 text-center">
-        <img class="img-fluid" src="/Fotos/foto-8.jpg" alt="">
+        <img class="img-fluid" src="Fotos/foto-8.jpg" alt="">
       </div>
       
     </section>
